# AnimaImagineSkill

./: .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  download_anima.py  mcp-config.json  pyproject.toml  start.ps1
AnimaImagineSkill/: SKILL.md
AnimaImagineSkill/references/: artist-list.md  build_index.py  prompt-examples.md
scripts/: migrate_thumbs.py
skill/: SKILL.md
skill/references/: artist-list.md  prompt-examples.md
src/anima_imagine/: __init__.py  __main__.py  app.py  codex.py  config.py  gallery.html  login.html  main.py  pipeline.py  prompt_builder.py  resolution.py  server.py  storage.py
src/anima_imagine/domain/: models.py  resolution.py
src/anima_imagine/infra/: db.py  pipeline.py  queue.py  security.py  storage.py
src/anima_imagine/routers/: auth.py  gallery.py  generate.py  mcp.py  pages.py  preferences.py
src/anima_imagine/schemas/: schemas.py
src/anima_imagine/services/: auth.py  codex.py  gallery.py  generation.py
src/anima_imagine/static/css/: gallery.css
src/anima_imagine/static/js/: app.js  autocomplete.js  field-presets.js  gallery-view.js  generator.js  lightbox.js  pill-input.js  tag-data-manager.js  tag-data.js  utils.js
tests/: test_codex.py  test_codex_resolve.py  test_db.py  test_queue.py  test_resolution.py  test_schemas.py  test_security.py  test_storage.py
